--- a/start.html
+++ b/start.html
@@ -3,6 +3,12 @@
 
     <head>
         <title>Start</title>
+        <style>
+            h1 {
+                font-size: 30px;
+                color: chartreuse;
+            }
+        </style>
     </head>
 
     <body>
